# Pololu_Localization

./: README.md
edisonCore/: Edison_Protocol  Makefile  client.cpp  imuData.cpp  poseExtractor.cpp
libpololu-avr/: installer.nsi
libpololu-avr/atmel_studio/: extension.vsix
libpololu-avr/examples/atmega1284p/hex_files/: analog1.hex  buzzer1.hex  buzzer2.hex  buzzer3.hex  lcd1.hex  lcd2.hex  lcd3-hello-world.hex  led1.hex  motors1.hex  motors2.hex  pulsein1.hex  pulsein2.hex  pushbuttons1.hex  pushbuttons2.hex  serial2.hex  servo-control-using-delays.hex  servos-and-buzzer.hex  servos1.hex  simple-test.hex  stepper-motor1.hex  svp-demo-program.hex  svp-eight-servo.hex  svp-one-servo.hex  svp-sixteen-servo.hex  svp1.hex  wdt.hex  wheel-encoders1.hex
libpololu-avr/examples/atmega1284p/pulsein1/: pulsein1.aps  pulsein1.cproj
libpololu-avr/examples/atmega1284p/stepper-motor1/: stepper-motor1.aps
libpololu-avr/examples/atmega1284p/svp-sixteen-servo/: svp-sixteen-servo.atsln
libpololu-avr/examples/atmega1284p/svp1/: svp1.atsln
libpololu-avr/examples/atmega1284p_x2/analog1/: analog1.aps
libpololu-avr/examples/atmega1284p_x2/buzzer1/: buzzer1.aps
libpololu-avr/examples/atmega1284p_x2/buzzer3/: buzzer3.aps
libpololu-avr/examples/atmega1284p_x2/hex_files/: analog1.hex  buzzer1.hex  buzzer2.hex  buzzer3.hex  digital1.hex  lcd1.hex  lcd2.hex  led1.hex  (+15 more)
pololu_talker/: CMakeLists.txt  package.xml
pololu_talker/launch/: display.launch
pololu_talker/src/: pololuPub.cpp
pololu_urdf/: CMakeLists.txt  package.xml  pololuConfig.rviz
pololu_urdf/urdf/: pololu.urdf
(+179 files in other folders)
